--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,10 @@ out/
 # release/
 
 # Gradle files
+.gradle
 .gradle/
 build/
+build
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -37,6 +39,7 @@ proguard/
 captures/
 
 # IntelliJ
+.idea
 *.iml
 .idea/workspace.xml
 .idea/tasks.xml
